--- a/app/views/mvp1/user-list-prap.html
+++ b/app/views/mvp1/user-list-prap.html
@@ -170,7 +170,7 @@
         </form>
     {% endset %}
 
-    <div class="govuk-grid-row">
+    <div class="govuk-width-container">
         <h1 class="govuk-heading-l listing-page">Users</h1>
 
         <a href="user-add-user-prap-org" class="govuk-button listing-page">
@@ -185,7 +185,7 @@
         <table class="govuk-table">
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
+                    <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name <span class="govuk-sorted-by">(Currently sorted by name, a-z)</span></th>
                     <th scope="col" class="govuk-table__header govuk-!-width-one-third">Organisation</th>
                     <th scope="col" class="govuk-table__header">Status</th>
                 </tr>
