--- a/app/views/mvp1/user-list-prap-sorted.html
+++ b/app/views/mvp1/user-list-prap-sorted.html
@@ -17,6 +17,78 @@
         <form action="user-list-prap" method="post" id="search-refine" class="govuk-grid-row govuk-!-margin-right-0 govuk-!-margin-left-0 govuk-sort-filter">
             <fieldset class="govuk-grid-column-one-half govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                    Filter results
+                </legend>
+
+                {{ govukSelect({
+                    id: "filterorg",
+                    name: "filterorg",
+                    label: {
+                        text: "Organisation"
+                    },
+                    items: [
+                        {
+                            value: "",
+                            text: "All organisations"
+                        },
+                        {
+                            value: "Capita",
+                            text: "Capita",
+                            selected: true
+                        },
+                        {
+                            value: "G4S",
+                            text: "G4S"
+                        },
+                        {
+                            value: "London Borough of Croydon Council",
+                            text: "London Borough of Croydon Council"
+                        },
+                        {
+                            value: "Remploy",
+                            text: "Remploy"
+                        },
+                        {
+                            value: "Serco",
+                            text: "Serco"
+                        }
+                    ]
+                }) }}
+
+                {{ govukSelect({
+                    id: "filterstatus",
+                    name: "filterstatus",
+                    label: {
+                        text: "Status"
+                    },
+                    items: [
+                        {
+                            value: "",
+                            text: "All statuses"
+                        },
+                        {
+                            value: "active",
+                            text: "active",
+                            selected: true
+                        },
+                        {
+                            value: "inactive",
+                            text: "inactive"
+                        },
+                        {
+                            value: "pending activation",
+                            text: "pending activation"
+                        },
+                        {
+                            value: "invite expired",
+                            text: "invite expired"
+                        }
+                    ]
+                }) }}
+            </fieldset>
+
+            <fieldset class="govuk-grid-column-one-half govuk-fieldset">
+                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                     Sort results
                 </legend>
 
@@ -95,85 +167,15 @@
                 }) }}
             </fieldset>
 
-            <fieldset class="govuk-grid-column-one-half govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                    Filter results
-                </legend>
-
-                {{ govukSelect({
-                    id: "filterorg",
-                    name: "filterorg",
-                    label: {
-                        text: "Organisation"
-                    },
-                    items: [
-                        {
-                            value: "",
-                            text: "All organisations"
-                        },
-                        {
-                            value: "Capita",
-                            text: "Capita",
-                            selected: true
-                        },
-                        {
-                            value: "G4S",
-                            text: "G4S"
-                        },
-                        {
-                            value: "London Borough of Croydon Council",
-                            text: "London Borough of Croydon Council"
-                        },
-                        {
-                            value: "Remploy",
-                            text: "Remploy"
-                        },
-                        {
-                            value: "Serco",
-                            text: "Serco"
-                        }
-                    ]
-                }) }}
-
-                {{ govukSelect({
-                    id: "filterstatus",
-                    name: "filterstatus",
-                    label: {
-                        text: "Status"
-                    },
-                    items: [
-                        {
-                            value: "",
-                            text: "All statuses"
-                        },
-                        {
-                            value: "active",
-                            text: "active",
-                            selected: true
-                        },
-                        {
-                            value: "inactive",
-                            text: "inactive"
-                        },
-                        {
-                            value: "pending activation",
-                            text: "pending activation"
-                        },
-                        {
-                            value: "invite expired",
-                            text: "invite expired"
-                        }
-                    ]
-                }) }}
-            </fieldset>
-
             <button class="govuk-button govuk-filters-button" data-module="govuk-button">
                 Refine results
             </button>
 
-            <a href="user-list-prap" class="govuk-button">
-                Reset filters and sorting
-            </a>
+            <p class="govuk-filter-reset">
+                <a href="user-list-prap" class="govuk-link">
+                    Reset filters and sorting
+                </a>
+            </p>
         </form>
     {% endset %}
 
@@ -185,7 +187,7 @@
         </a>
 
         {{ govukDetails({
-            summaryText: "Sort and filter results",
+            summaryText: "Filter and sort users",
             html: sortFilterHtml
         }) }}
 
