Start of users list views, updating hrefs etc:

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
-                    Complete re-organisation of views to allow for better URLs, etc
+                    Complete re-organisation of view templates to allow for better URLs, etc
                 </li>
             </ul>
 
