--- a/app/views/v5/l2/dashboard.html
+++ b/app/views/v5/l2/dashboard.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Dashboard - HTDS - {{serviceName}}
+    Dashboard
 {% endblock %}
 
 {% block header %}
@@ -29,11 +29,11 @@
 
         <ul class="govuk-list">
             <li>
-                <a href="organisation-add-name" class="govuk-link">Add an organisation</a>
+                <a href="orgs/add/start" class="govuk-link">Add an organisation</a>
             </li>
 
             <li>
-                <a href="organisation-list-prap" class="govuk-link">View all organisations</a>
+                <a href="orgs/view/all" class="govuk-link">View all organisations</a>
             </li>
         </ul>
     </div>
@@ -55,11 +55,11 @@
 
         <ul class="govuk-list">
             <li>
-                <a href="user-add-user-prap-org" class="govuk-link">Add a user</a>
+                <a href="users/add/start" class="govuk-link">Add a user</a>
             </li>
 
             <li>
-                <a href="user-list-prap" class="govuk-link">View all users</a>
+                <a href="users/view/all" class="govuk-link">View all users</a>
             </li>
         </ul>
     </div>
