Move sign in/signed out views into level folder

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,14 +21,31 @@
 
             <h2 class="govuk-heading-l">v5</h2>
 
-            <a href="/v5/signin" class="govuk-button govuk-!-margin-right-1">View v5 prototype</a>
-            <a href="/v5/dashboard-service-prap-no-orgs" class="govuk-button">View 'no organisations' dashboard</a>
+            <!--<a href="/v5/l1/signin" class="govuk-button govuk-!-margin-right-1">
+                View as a L1 super admin
+            </a>-->
+
+            <a href="/v5/l2/signin" class="govuk-button govuk-!-margin-right-1">
+                View as a L2 service admin
+            </a>
+
+            <!--<a href="/v5/l3/signin" class="govuk-button govuk-!-margin-right-1">
+                View as a L3 organisation admin
+            </a>
+
+            <a href="/v5/l4/signin" class="govuk-button govuk-!-margin-right-1">
+                View as a L4 user
+            </a>-->
 
             <h3 class="govuk-heading-s">General changes</h3>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
                     Complete re-organisation of view templates to allow for better URLs, etc
+                </li>
+
+                <li>
+                    Start creating journeys for other level users
                 </li>
             </ul>
 
