--- a/app/views/v5/l2/signin-code.html
+++ b/app/views/v5/l2/signin-code.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
-    <form action="l2/dashboard" method="post">
+    <form action="dashboard" method="post">
         {{ govukFieldset({
             legend: {
                 html: "We've sent you a text message",
