--- a/app/views/v5/l2/orgs/view/all.html
+++ b/app/views/v5/l2/orgs/view/all.html
@@ -1,107 +1,211 @@
 {% extends "layout.html" %}
 
-{% block pageTitle %}
-    Organisation details - {{siteName}}
-{% endblock %}
+{% block pageTitle %}{% endblock %}
 
 {% block header %}
     {{ super() }}
 {% endblock %}
 
 {% block beforeContent %}
-  {% include '../includes/back-button.njk' %}
+    {% include 'includes/back-button.njk' %}
 {% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">
-                Organisation details
+            <h1 class="govuk-heading-l listing-page">
+                Organisations using HTDS
             </h1>
 
-            {{ govukSummaryList({
-                rows: [
-                    {
-                        key: {
-                            text: "Name"
-                        },
-                        value: {
-                            text: data['organisation-name']
-                        }
-                    },
-                    {
-                        key: {
-                            text: "Users"
-                        },
-                        value: {
-                            text: "13"
-                        },
-                        actions: {
-                            items: [
-                              {
-                                href: "#",
-                                text: "View users",
-                                visuallyHiddenText: "name"
-                              }
-                            ]
-                          }
-                    },
-                    {
-                        key: {
-                            text: "Created"
-                        },
-                        value: {
-                            html: '9 April 2019, 10:30am'
-                        }
-                    }
-                ]
-            }) }}
+            <a href="../add/start" class="govuk-button listing-page">
+                Add an organisation
+            </a>
 
-            <form id="form" method="post" action="reinvite-confirm">
+            <table class="govuk-table">
+                <thead class="govuk-table__head">
+                    <tr class="govuk-table__row">
+                        <th scope="col" class="govuk-table__header govuk-!-width-half">Name</th>
+                        <th scope="col" class="govuk-table__header govuk-table__header--numeric">Users</th>
+                        <th scope="col" class="govuk-table__header"></th>
+                    </tr>
+                </thead>
 
-            {{ govukRadios({
-                classes: "govuk-radios",
-                idPrefix: "user-task",
-                name: "user-task",
-                fieldset: {
-                  legend: {
-                    text: "Which task would you like to perform?",
-                    isPageHeading: true,
-                    classes: "govuk-fieldset__legend--m"
-                  }
-                },
-                items: [
-                  {
-                    value: "suspend",
-                    text: "Suspend the organisation"
-                  },
-                  {
-                    value: "delete",
-                    text: "Delete the organisation"
-                  }
-                ]
-              }) }}
+                <tbody class="govuk-table__body">
+                    {% if data['organisation-name'] %}
+                        <tr class="govuk-table__row">
+                            <th scope="row" class="govuk-table__header">
+                                <a href="new" class="govuk-link">
+                                    {{ data['organisation-name'] }}
+                                </a>
+                            </th>
 
+                            <td class="govuk-table__cell govuk-table__cell--numeric">
+                                {% if data['user-first-name'] and data['user-last-name'] %}
+                                    1
+                                {% else %}
+                                    0
+                                {% endif %}
+                            </td>
 
-              <input type="submit" class="govuk-button govuk-!-margin-right-1" value="Continue" id="submit">
+                            <td class="govuk-table__cell">
+                                {% if not data['contact-1-first-name'] and not data['contact-2-first-name'] and not data['address-line-1'] %}
+                                    <a href="organisation-complete-details" class="govuk-link">
+                                        Complete details
+                                    </a>
+                                {% elseif not data['contact-1-first-name'] and not data['contact-2-first-name'] and data['address-line-1'] %}
+                                    <a href="organisation-complete-details" class="govuk-link">
+                                        Add contacts
+                                    </a>
+                                {% elseif data['contact-1-first-name'] and data['contact-2-first-name'] and not data['address-line-1'] %}
+                                    <a href="organisation-complete-details" class="govuk-link">
+                                        Complete details
+                                    </a>
+                                {% elseif data['contact-1-first-name'] and not data['contact-2-first-name'] and not data['address-line-1'] %}
+                                    <a href="organisation-complete-details" class="govuk-link">
+                                        Complete details
+                                    </a>
+                                {% elseif data['user-first-name'] and data['user-last-name'] %}
+                                    <a href="../../users/view/new" class="govuk-link">
+                                        View user
+                                    </a>
+                                {% else %}
+                                    <a href="../../users/add/start-new" class="govuk-link">
+                                        Add user
+                                    </a>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endif %}
 
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="capita" class="govuk-link">
+                                Capita
+                            </a>
+                        </th>
 
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['organisation-name'] == 'Capita' %}
+                                14
+                            {% else %}
+                                13
+                            {% endif %}
+                        </td>
 
-        </form>
+                        <td class="govuk-table__cell">
+                            <a href="../../users/view/capita" class="govuk-link">View users</a>
+                        </td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="dwp" class="govuk-link">
+                                DWP
+                            </a>
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['user-first-name'] and data['user-last-name'] and data['organisation-name'] == 'dwp' %}
+                                133
+                            {% else %}
+                                132
+                            {% endif %}
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            <a href="../../users/view/dwp" class="govuk-link">View users</a>
+                        </td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="g4s" class="govuk-link">
+                                G4S
+                            </a>
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['organisation-name'] == 'G4S' %}
+                                16
+                            {% else %}
+                                15
+                            {% endif %}
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            <a href="../../users/view/g4s" class="govuk-link">View users</a>
+                        </td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="croydon" class="govuk-link">
+                                London Borough of Croydon Council
+                            </a>
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['organisation-name'] == 'London Borough of Croydon Council' %}
+                                16
+                            {% else %}
+                                15
+                            {% endif %}
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            <a href="../../users/view/croydon" class="govuk-link">View users</a>
+                        </td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="remploy" class="govuk-link">
+                                Remploy
+                            </a>
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['organisation-name'] == 'Remploy' %}
+                                24
+                            {% else %}
+                                23
+                            {% endif %}
+
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            <a href="../../users/view/remploy" class="govuk-link">View users</a>
+                        </td>
+                    </tr>
+
+                    <tr class="govuk-table__row">
+                        <th scope="row" class="govuk-table__header">
+                            <a href="serco" class="govuk-link">
+                                Serco
+                            </a>
+                        </th>
+
+                        <td class="govuk-table__cell govuk-table__cell--numeric">
+                            {% if data['organisation-name'] == 'Serco' %}
+                                8
+                            {% else %}
+                                7
+                            {% endif %}
+
+                        </td>
+
+                        <td class="govuk-table__cell">
+                            <a href="../../users/view/serco" class="govuk-link">View users</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
             <p class="govuk-!-margin-top-9">
-                <a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a>
+                <a href="../../dashboard" class="govuk-link">
+                    Back to dashboard
+                </a>
             </p>
-
         </div>
     </div>
-
-
-    <script>
-        var nextPageRoutes = {
-          reinvite: 'reinvite-confirm.html',
-          suspend: 'suspend-check.html',
-          delete: 'delete-check.html',
-        }
-      </script>
 {% endblock %}
