--- a/app/views/v5/l2/orgs/view/croydon.html
+++ b/app/views/v5/l2/orgs/view/croydon.html
@@ -9,81 +9,154 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {% include '../includes/back-button.njk' %}
+    {% include 'includes/back-button.njk' %}
 {% endblock %}
 
 {% block content %}
     <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
+        <div class="govuk-width-container">
             <h1 class="govuk-heading-l">
-                Organisation details
+                London Borough of Croydon Council
             </h1>
 
-            {{ govukSummaryList({
-                rows: [
-                    {
-                        key: {
-                            text: "Name"
-                        },
-                        value: {
-                            text: 'London Borough of Croydon Council'
-                        }
-                    },
-                    {
-                        key: {
-                            text: "Users"
-                        },
-                        value: {
-                            text: "13"
-                        },
-                        actions: {
-                            items: [
-                              {
-                                href: "#",
-                                text: "View users",
-                                visuallyHiddenText: "name"
-                              }
-                            ]
-                          }
-                    },
-                    {
-                        key: {
-                            text: "Created"
-                        },
-                        value: {
-                            html: '9 April 2019, 10:30am'
-                        }
-                    }
-                ]
-            }) }}
+            <div class="govuk-cards govuk-cards--3">
+                <div class="govuk-cards--2__item govuk-card--company">
+                    <h2 class="govuk-heading-m">Company details</h2>
+
+                    <p>
+                        Access Croydon<br>
+                        Bernard Weatherill House<br>
+                        8 Mint Walk<br>
+                        Croydon<br>
+                        CR0 1EA
+
+                    </p>
+
+                    <!--<p>Company number: 04992204</p>-->
+
+                    <p>
+                        <a href="#" class="govuk-link">Edit organisation details</a>
+                    </p>
+                </div>
+
+                <div class="govuk-cards--2__item govuk-card--contacts">
+                    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Contacts</h2>
+
+                    <p class="govuk-heading-xl govuk-!-margin-bottom-5">
+                        <span class="govuk-visually-hidden">There are currently</span>
+
+                        4
+
+                        <span class="govuk-visually-hidden">contacts in the system</span>
+                    </p>
+
+                    <ul class="govuk-list">
+                        <li>
+                            <a href="#" class="govuk-link">Add a contact</a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="govuk-link">View all contacts</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="govuk-cards govuk-cards--2">
+                <div class="govuk-cards--2__item govuk-card--dashboard">
+                    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Users</h2>
+
+                    <p class="govuk-heading-xl govuk-!-margin-bottom-5">
+                        <span class="govuk-visually-hidden">There are currently</span>
+
+                        {% if data['user-first-name'] and data['user-last-name'] %}
+                            16
+                        {% else %}
+                            15
+                        {% endif %}
+
+                        <span class="govuk-visually-hidden">users in the system</span>
+                    </p>
+
+                    <ul class="govuk-list">
+                        <li>
+                            <a href="user-add-user-prap-croydon" class="govuk-link">Add a user</a>
+                        </li>
+
+                        <li>
+                            <a href="user-list-prap-croydon" class="govuk-link">View all users</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="govuk-cards--2__item govuk-card--dashboard">
+                    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Services</h2>
+
+                    <p class="govuk-heading-xl govuk-!-margin-bottom-5">
+                        <span class="govuk-visually-hidden">There are currently</span>
+
+                        2
+
+                        <span class="govuk-visually-hidden">services in the system</span>
+                    </p>
+
+                    <ul class="govuk-list">
+                        <li>
+                            <a href="#" class="govuk-link">View all services</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="govuk-cards--2__item govuk-card--dashboard">
+                    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Teams</h2>
+
+                    <p class="govuk-heading-xl govuk-!-margin-bottom-5">
+                        <span class="govuk-visually-hidden">There are currently</span>
+
+                        2
+
+                        <span class="govuk-visually-hidden">teams in the system</span>
+                    </p>
+
+                    <ul class="govuk-list">
+                        <li>
+                            <a href="#" class="govuk-link">View all teams</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
             <form id="form" method="post" action="org-actions">
                 {{ govukRadios({
                     classes: "govuk-radios",
-                    idPrefix: "user-task",
-                    name: "user-task",
+                    idPrefix: "org-task",
+                    name: "org-task",
                     fieldset: {
                         legend: {
-                            text: "Which task would you like to perform?",
+                            text: "Manage organisation and users",
                             isPageHeading: true,
-                            classes: "govuk-fieldset__legend--m"
+                            classes: "govuk-fieldset__legend--m govuk-!-margin-top-7"
                         }
                     },
                     items: [
                         {
-                            value: "suspend",
-                            text: "Suspend the organisation"
+                            value: "remove-by-team",
+                            text: "Remove users by team"
+                        },
+                        {
+                            value: "remove-by-service",
+                            text: "Remove users by service"
                         },
                         {
                             value: "delete",
-                            text: "Delete the organisation"
+                            text: "De-activate London Borough of Croydon Council"
                         }
                     ]
                 }) }}
 
-                <input type="hidden" value="London Borough of Croydon Council" name="organisation-name" id="organisation-name">
+                <input type="hidden" value="G4S" name="organisation-name" id="organisation-name">
 
-                <input type="submit" class="govuk-button govuk-!-margin-right-1" value="Continue" id="submit">
+                <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">Continue</button>
             </form>
 
             <p class="govuk-!-margin-top-9">
