--- a/app/views/v5/l2/orgs/view/dwp.html
+++ b/app/views/v5/l2/orgs/view/dwp.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {% include '../includes/back-button.njk' %}
+    {% include 'includes/back-button.njk' %}
 {% endblock %}
 
 {% block content %}
