More org add journey porting

--- a/app/views/v5/l2/orgs/add/confirmation.html
+++ b/app/views/v5/l2/orgs/add/confirmation.html
@@ -18,14 +18,14 @@
 
         {% if data['contact-1-first-name'] and data['contact-2-first-name'] and data['address-line-1'] %}
         <p>
-            <a href="user-add-user-prap-new" class="govuk-link">
+            <a href="../../users/add/start" class="govuk-link">
                 Add a user to {{ data['organisation-name'] }}
             </a>
         </p>
         {% endif %}
 
         <p>
-            <a href="dashboard-service-prap" class="govuk-link">
+            <a href="../../dashboard" class="govuk-link">
                 Back to dashboard
             </a>
         </p>
