--- a/app/views/v5/l2/orgs/add/summary.html
+++ b/app/views/v5/l2/orgs/add/summary.html
@@ -30,7 +30,7 @@
                         </dd>
 
                         <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" href="#">
+                            <a class="govuk-link" href="start">
                                 Change<span class="govuk-visually-hidden"> name</span>
                             </a>
                         </dd>
@@ -50,8 +50,8 @@
                             </dd>
 
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" href="#">
-                                    Change<span class="govuk-visually-hidden"> date of birth</span>
+                                <a class="govuk-link" href="address">
+                                    Change<span class="govuk-visually-hidden"> address</span>
                                 </a>
                             </dd>
                         </div>
@@ -71,8 +71,8 @@
                             </dd>
 
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" href="#">
-                                    Change<span class="govuk-visually-hidden"> address</span>
+                                <a class="govuk-link" href="contact">
+                                    Change<span class="govuk-visually-hidden"> contact details</span>
                                 </a>
                             </dd>
                         </div>
@@ -92,8 +92,8 @@
                             </dd>
 
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" href="#">
-                                    Change<span class="govuk-visually-hidden"> contact details</span>
+                                <a class="govuk-link" href="contact-2">
+                                    Change<span class="govuk-visually-hidden"> contact 2 details</span>
                                 </a>
                             </dd>
                         </div>
@@ -113,8 +113,8 @@
                             </dd>
 
                             <dd class="govuk-summary-list__actions">
-                                <a class="govuk-link" href="#">
-                                    Change<span class="govuk-visually-hidden"> contact details</span>
+                                <a class="govuk-link" href="contact-3">
+                                    Change<span class="govuk-visually-hidden"> contact 3 details</span>
                                 </a>
                             </dd>
                         </div>
